Added SerpAPISearch for degree apprentiships